<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".VetSELogin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="240dp"
        android:layout_height="132dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="96dp"
        android:src="@drawable/imgcadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        android:textColor="@color/dark_grey"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/login_aviso"
        android:textColor="@color/light_grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <EditText

        android:id="@+id/edit_email"
        style="@style/edit_text"
        android:hint="a@b.com"
        android:drawableLeft="@drawable/ic_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo"
        tools:ignore="Autofill,HardcodedText,RtlHardcoded" />


    <EditText

        android:id="@+id/edit_senha"
        style="@style/edit_text"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_lock_24"
        android:drawableRight="@drawable/ic_eye_24"
        android:hint="Digite sua senha"
        android:inputType="numberPassword"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        tools:ignore="Autofill,HardcodedText,RtlHardcoded" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logar"
        style="@style/Button"
        android:text="Logar"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"
        android:background="@drawable/button"
        android:drawableRight="@drawable/ic_arrow_24"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <TextView
        android:id="@+id/esq_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:textColor="@color/Green_main"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-50dp"
        app:layout_constraintBottom_toBottomOf="@id/logar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/possui_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-60dp"
        android:text="@string/senha"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/esq_senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cadastre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-60dp"
        android:text="@string/cadastro"
        android:textColor="@color/Green_main"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/esq_senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateIds" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>